--- a/app/src/main/res/drawable/pressed_layout.xml
+++ b/app/src/main/res/drawable/pressed_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true"
-        android:drawable="#ff0000" /> <!-- pressed -->
+        android:drawable="@android:color/transparent" /> <!-- pressed -->
     <item android:state_focused="true"
-        android:drawable="#ffffff" /> <!-- focused -->
-    <item android:drawable="#fff000" /> <!-- default -->
+        android:drawable="@android:color/transparent" /> <!-- focused -->
+    <item android:drawable="@android:color/darker_gray" /> <!-- default -->
 </selector>
