--- a/app/src/main/res/layout/activity_detail_neighbour.xml
+++ b/app/src/main/res/layout/activity_detail_neighbour.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity_detail_neighbour">
+    tools:context=".ui.neighbour_list.activity_detail_neighbour">
 
     <FrameLayout
         android:id="@+id/avatar_detail"
