--- a/app/src/main/res/layout/fragment_neighbour.xml
+++ b/app/src/main/res/layout/fragment_neighbour.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/user"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:background="@drawable/pressed_layout"
-    android:clickable="true">
+    android:clickable="true"
+    android:onClick="detail_neighbour"
+    android:orientation="vertical">
 
 
     <ImageView
