--- a/app/src/main/res/layout/activity_list_neighbour.xml
+++ b/app/src/main/res/layout/activity_list_neighbour.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ui.neighbour_list.ListNeighbourActivity">
+    tools:context=".Controllers.Activities.ListNeighbourActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -35,13 +35,13 @@
                 android:id="@+id/tabItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/tab_neighbour_title" />
+                 />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/tab_favorites_title" />
+                 />
 
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
